--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <title>Meu Currículo</title>
 </head>
 <body>
-    <h1>Currículo do Jão</h1>
-    <h2>Desenvolvedor Web</h2>
+    <img src="pessoa.jpg" width="300">
+    <h1> Astolfo Silva </h1>
+    <h2> Engenheiro de Software </h2>
+     <p>
+     AstolfoS@gmail.com<br>
+     (019)99542-2231 <br>
+     linkedin.com/in/astolfosilva<br>
+     </p>
+    <br>
+    <h2> Curso<hr></h2>
+    <p>
+        Ciência da Computação.<br> 
+        Engenharia da Computação.<br> 
+        Sistemas de Informação.<br>
+    </p>
+    <br>
+    <h2> Experiência Profissional <hr></h2> 
+    <p>
+        Microsoft - 1 Ano e 4 Meses - Manutenção de Softwares
+    </p>
 </body>
 </html>
